fix(LocalRunnerClient): correctly capture stdout and stderr to avoid missing output in method exec